--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env
+#.env  #--izjema, drugače tega ne počnemo
 .env.development.local
 .env.test.local
 .env.production.local
